--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">CoffeeFinder</string>
     <string name="title_activity_maps">CoffeeMap</string>
+    <string name="request_location">We need your location to find out where are you.</string>
+    <string name="dialog_auth">Auth</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="location_denied">This program might not work as you aspected. Please reconsider to authrize location permission for us.</string>
+    <string name="auth_yourself">You can authorize manually. Simply go to Setting -> Apps -> %1$s -> Permissions -> Enable %2$s.</string>
+    <string name="auth_location">Location</string>
+    <string name="auto_go">Take me there</string>
 </resources>
