--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -10,4 +10,6 @@
     <string name="auth_location">位置</string>
     <string name="auto_go">帶我去</string>
     <string name="permission_needed">需要位置權限</string>
+    <string name="service_unavailable">目前無法使用</string>
+    <string name="high_accuracy_recommand">請開啟定位，並使用高精確度模式</string>
 </resources>
