Get user accurate position.

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CoffeeFinder</string>
-    <string name="title_activity_maps">CoffeeMap</string>
+    <string name="title_activity_maps">地圖</string>
     <string name="request_location">我們需要你的地理位置來尋找附近的店</string>
     <string name="dialog_auth">授權</string>
     <string name="dialog_cancel">取消</string>
