--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CoffeeFinder</string>
-    <string name="title_activity_maps">CoffeeMap</string>
+    <string name="title_activity_maps">Map</string>
     <string name="request_location">We need your location to find out where are you.</string>
     <string name="dialog_auth">Auth</string>
     <string name="dialog_cancel">Cancel</string>
