Navigate will check Google Map is install or not

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="cheap_value">Cost Cheapness: %1$s</string>
     <string name="seat_value">Seat Availablity: %1$s</string>
     <string name="quiet_value">Quiet: %1$s</string>
+    <string name="googlemap_not_install">Google Map is not install, Please go to Play Store to install it.</string>
 </resources>
