--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -21,4 +21,5 @@
     <string name="cheap_value">價格便宜: %1$s</string>
     <string name="seat_value">通常有位: %1$s</string>
     <string name="quiet_value">安靜程度: %1$s</string>
+    <string name="googlemap_not_install">沒有安裝 Google Map, 請先去 Play 商店安裝</string>
 </resources>
