About and Boss Activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="about_data_comes_from">Special thanks Coffee Nomad for shops data.</string>
     <string name="boss_hanashi">I\'m Smelly Head!!! \n The boss of these humans!!!</string>
     <string name="boss_feed">Buy a coffee for Smelly!</string>
+    <string name="boss_title">You\'ve found SMELLY HEAD the boss!</string>
 </resources>
