--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -54,4 +54,5 @@
     <string name="about_data_comes_from">咖啡館資料由 CafeNomad 提供</string>
     <string name="boss_hanashi">啊啊啊啊 :\u3008 \n被找到了！這是臭頭！</string>
     <string name="boss_feed">請臭頭喝咖啡</string>
+    <string name="boss_title">你找到了一隻叫臭頭的貓</string>
 </resources>
