--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="boss_hanashi">I\'m Smelly Head!!! \n The boss of these humans!!!</string>
     <string name="boss_feed">Buy a coffee for Smelly!</string>
     <string name="boss_title">You\'ve found SMELLY HEAD the boss!</string>
+    <string name="trophy_boss">Trophy Unlocked: Hidden Room.</string>
 </resources>
