--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -55,4 +55,5 @@
     <string name="boss_hanashi">啊啊啊啊 :\u3008 \n被找到了！這是臭頭！</string>
     <string name="boss_feed">請臭頭喝咖啡</string>
     <string name="boss_title">你找到了一隻叫臭頭的貓</string>
+    <string name="trophy_boss">已獲得獎盃: 隱藏房間</string>
 </resources>
