--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,5 @@
     <string name="menu_about">About</string>
     <string name="no_any_coffee_shop">Found none of coffee shop around here!</string>
     <string name="about_message">if you feel sleepy, did you have another cup of coffee?</string>
-    <string name="about_work">Worker</string>
-    <string name="about_designer">Designer</string>
-    <string name="about_backend">Backend and DevOps</string>
-    <string name="about_android">Android App</string>
-    <string name="about_licence">About coffee shops data</string>
-    <string name="about_data_comes_from">Special thanks Coffee Nomad for shops data.</string>
+    <string name="network_error_fetching_api">There is an error occurred when looking for coffee shops.</string>
 </resources>
